force-app/main/default/objects/Talep__c/Talep__c.object-meta.xml
<CustomObject>
    <label>Talep</label>
    <nameField>
        <displayFormat>K-{0000}</displayFormat>
        <label>Talep Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Talepler</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>