force-app/main/default/objects/Talep__c/fields/Kayit_Tarihi__c.field-meta.xml
<CustomField>
    <fullName>Kayit_Tarihi__c</fullName>
    <label>Kayit Tarihi</label>
    <type>Date</type>
</CustomField>