force-app/main/default/objects/Talep__c/fields/Musteri__c.field-meta.xml
<CustomField>
    <fullName>Musteri__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Musteri</label>
    <referenceTo>Musteri__c</referenceTo>
    <relationshipLabel>Talepler</relationshipLabel>
    <relationshipName>Talepler</relationshipName>
    <type>Lookup</type>
</CustomField>