force-app/main/default/objects/Talep__c/fields/Talep_E__c.field-meta.xml
<CustomField>
    <fullName>Talep_E__c</fullName>
    <label>Talep Eden Birim</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Operasyon</fullName>
            </value>
            <value>
                <fullName>Muhasebe</fullName>
            </value>
            <value>
                <fullName>Musteri Kabul</fullName>
            </value>
            <value>
                <fullName>Satin Alma</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>