force-app/main/default/objects/Talep__c/fields/Talep_T_r__c.field-meta.xml
<CustomField>
    <fullName>Talep_T_r__c</fullName>
    <label>Talep Türü</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Şikayet</fullName>
            </value>
            <value>
                <fullName>Talep</fullName>
            </value>
            <value>
                <fullName>Öneri</fullName>
            </value>
            <value>
                <fullName>Genel Değerlendirme</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>