force-app/main/default/objects/Talep__c/fields/Toplanti__c.field-meta.xml
<CustomField>
    <fullName>Toplanti__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Toplanti</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Toplanti__c.Toplanti_Durumu__c</field>
            <operation>equals</operation>
            <value>Acik</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Toplanti__c</referenceTo>
    <relationshipLabel>Talepler</relationshipLabel>
    <relationshipName>Talepler</relationshipName>
    <type>Lookup</type>
</CustomField>