force-app/main/default/objects/Talep__c/fields/Toplantiya_Gerek_Yok__c.field-meta.xml
<CustomField>
    <fullName>Toplantiya_Gerek_Yok__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Toplantiya Gerek Yok</label>
    <type>Checkbox</type>
</CustomField>